# mega-planner

./: .gitignore  README.md  mega_planner.py  pyproject.toml
docs/: git-msg-tags.md
mega_planner/: __init__.py  cli.py  pipeline.py
mega_planner/prompts/: external-synthesize-prompt.md  mega-bold-proposer.md  mega-paranoia-proposer.md  mega-proposal-reducer.md
prompts/: mega-bold-proposer.md  mega-code-reducer.md  mega-paranoia-proposer.md  mega-proposal-critique.md  mega-proposal-reducer.md  mega-resolver.md  mega-synthesizer.md  mega-understander.md  understander.md
tests/: test_pipeline.py
