[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mega-planner"
version = "0.1.0"
description = "7-stage multi-agent debate pipeline for implementation planning"
requires-python = ">=3.11"
dependencies = [
    "agentize",
]

[project.scripts]
mega-planner = "mega_planner.cli:main"

[tool.setuptools.packages.find]
include = ["mega_planner*"]

[tool.setuptools.package-data]
"mega_planner.prompts" = ["*.md"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
